--- a/css/estilos.css
+++ b/css/estilos.css
@@ -26,14 +26,15 @@ body{
 
 /*header*/
 
+
 header{
     width: 100%;
     height: 500px;
     background: hsl(45, 97%, 49%); 
      /* fallback for old browsers */
-    background: -webkit-linear-gradient(to bottom, hsla(0, 0%, 9%, 0.089), hsl(45, 98%, 49%)), url(../img/diseño.jpg);   
+    background: -webkit-linear-gradient(to bottom, hsla(0, 0%, 9%, 0.089), hsl(45, 98%, 49%)), url(../img/fondo.jpg);   
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom, hsla(0, 0%, 9%, 0.089), hsl(45, 98%, 49%)), url(../img/diseño.jpg); 
+    background: linear-gradient(to bottom, hsla(0, 0%, 9%, 0.089), hsl(45, 98%, 49%)), url(../img/fondo.jpg); 
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background-size: cover;
     background-attachment: fixed;
@@ -51,7 +52,7 @@ nav{
 }
 
 .nav__items{
-    color: #0d0d0d;
+    color: #f2bd1d;
     text-decoration: none;
     margin-left: 20px;
     padding: 10px 3px;
@@ -211,8 +212,8 @@ main .sobre-nosotros{
     height: 100%;
     top: 0;
     transform: scale(0);
-    background: hsla(54, 84%, 51%, 0.692);
-    transition: transform .5s ease-in-out;
+    background: hsla(46, 61%, 22%, 0.575);
+    transition: transform .6s ease-in-out;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -230,7 +231,7 @@ main .sobre-nosotros{
 }
 
 .imagen-port:hover .hover-galeria{
-    transform: scale(1);
+    transform: scale(1.5);
     /*transform: translateY(0%);*/
 }
 
